tests/negative/_cycle_back.orb
// TODO! all codegens should return NodeVal
// TODO! codegen funcs can return some handle to function
// TODO! separate codegen for terminals
// TODO! refactor codegen expr switches
// TODO! cast and arr outside of expr, oper by themselves
// TODO! replace errorUnknown with actual error messages
// TODO! remove obsolete compiler messages
// TODO! remove re-checking starting keyword
// TODO! check there are no types where there shouldn't be (don't forget codegenAll)
// TODO! check when needs to be in global (import, fnc, data)
import "tests/negative/test_import_cycle.orb";
